# llms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mingpt.py  pyproject.toml
data/dataset/: base.py  tensor_loader.py  test_tensor_loader.py
data/tokenizer/: all_chars.json  all_chars_v0.json  base.py  json_tokenizer.py  json_tokenizer_test.py
data/tokenizer/tests/: json_tokenizer_test.py
evaluations/: README.md  common.py  main.py  requirements.txt  typings.py
evaluations/evals/: aritheval.py  base.py  drop.py  gpqa.py  mapping.py  mmlu.py
evaluations/evals/aritheval/: README.md  make_data.py
evaluations/models/: base.py  mapping.py
evaluations/models/anthropic/: sampler.py  system_prompt.py
evaluations/models/gemma/: sampler.py
evaluations/models/llama/: sampler.py
evaluations/models/mistral/: sampler.py
evaluations/scripts/: addition_vis.ipynb  drop_llama.py  gpqa.py  mmlu_anthropic.py  mmlu_dummy_up_to_100_fs.py  mmlu_gemma_test.py  mmlu_mistral_test.py
experimental/: create_simple_tokenizer.py  investigate_shakespeare.ipynb  predict_token.py  pretokenize_dataset.py
model/: bag_of_words.py  bigram.py
model/lm/: attention.py  ffn.py  lm.py  norms.py  posemb.py
src/: train.py
src/data/: loader.py
src/model/: moe.py  routers.py  transformer.py
training/: checkpointing.py  inference.py  logging_utils.py  loss.py  train.py  utils.py
training/checkpoints/: bigram.pt
training/configs/: bag_of_words.py  bigram.yaml  bigram_model.py  slm.py  test_bag_of_words.py  test_bigram_model.py  test_lm.py
(+2 files in other folders)
